# GreedySnake

./: CMakeLists.txt  README.md
src/: main.cpp
src/component/: Food.cpp  Food.h  Map.cpp  Map.h  Point.cpp  Point.h  Snake.cpp  Snake.h
src/controller/: Controller.cpp  Controller.h
src/startinterface/: StartInterface.cpp  StartInterface.h
src/utils/: Tools.cpp  Tools.h
